style: fix homepage on mobile size

--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -19,6 +19,7 @@
     height: 100%;
     width: 100%;
     display: flex;
+
 }
 
 @media (max-width: 768px) {
@@ -29,8 +30,8 @@
 
     .main {
         flex-direction: column;
-        gap: 1rem;
-        justify-content: center;
         padding: 0;
+        height: 100%;
+        justify-content: space-around;
     }
 }
